--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,9 @@
-/**app.wxss**/
-.container {
+@import "./weui.wxss";
+
+page {
+  background-color: #F8F8F8;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  font-size: 32rpx;
+  line-height: 1.6;
+}
+
